btfy/gf264/src/polydiv.h


#ifndef _POLYDIV_H_
#define _POLYDIV_H_


#include <stdint.h>


void polydiv( uint64_t *poly , int polylen , unsigned si );

void ipolydiv( uint64_t *poly , int polylen , unsigned si );


#endif